--- a/src/components/SimonSays/SimonSays.css
+++ b/src/components/SimonSays/SimonSays.css
@@ -8,7 +8,7 @@
   src: url(../../assets/fonts/LilitaOne-Regular.ttf);
 }
 
-@keyframes slideInFromLeft {
+/* @keyframes slideInFromLeft {
   0% {
     opacity: 0.01;
     transform: rotate(-360deg) translateX(-100%);
@@ -18,23 +18,15 @@
     transform: rotate(0deg) translate(0%);
     transition: transform 0.3s, opacity 0.3s;
   }
-}
+} */
 
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #34495e;
   overflow: hidden;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 * {
@@ -61,7 +53,7 @@ code {
   padding: 2vh;
   overflow: hidden;
   border-radius: 50%;
-  animation: 1s ease-out 0s 1 slideInFromLeft;
+  /* animation: 1s ease-out 0s 1 slideInFromLeft; */
 }
 
 .button {
